@@ -145,7 +145,6 @@ static const typedata item_types[] = {
     {HORN, "horn", "horns", SK_THAUMATURGY, 0},
     {MONEY, "money", "money", 0, 0},
     {CLASS, "class", "classes", 0, 0},
-    {GRAVESTONE, "gravestone", "gravestones", 0, 0},
     {AMULET, "amulet", "amulets", SK_JEWELER, 0},
     {PLAYERMOVER, "player mover", "player movers", 0, 0},
     {TELEPORTER, "teleporter", "teleporters", 0, 0},
@@ -185,7 +184,6 @@ static const typedata item_types[] = {
     {MONSTER, "monster", "monsters", 0, 0},
     {LAMP, "lamp", "lamps", 0, 0},
     {DUPLICATOR, "duplicator", "duplicators", 0, 0},
-    {TOOL, "tool", "tools", 0, 0},
     {SPELLBOOK, "spellbook", "spellbooks", SK_LITERACY, 0},
     {CLOAK, "cloak", "cloaks", SK_SMITHERY, 0},
     {SPINNER, "spinner", "spinners", 0, 0},
